# Cohort360-Back-end

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  cliff.toml  commitlint.config.cjs  docker-compose.dev.yml  docker-entrypoint.sh  installation.md  log.conf  logger.py  make_release.sh  manage.py  nginx.conf  pyproject.toml  requirements.txt  requirements_upgraded.txt  requirements_versions_bump.txt  requirements_versions_diff.py  ruff.toml  rules.md  server.py  setup_logging.py  setup_logs_collector.py  sonar-project.properties  squach_migrations.sh  squash_migrations.sh
.conf/: .env.example  .test.env  gunicorn.conf.py  gunicorn.log.conf  nginx.conf  pytest.ini
.docs/: authentication.md  logging.md  rights_schema.md
.github/workflows/: codeql-analysis.yml  commitlint.yml  main.yml
.local/: LOCAL_SETUP.md  env.docker.example  loca-env.template
.local/jwt/: TOKEN_GENERATOR.md  generate_token.py
.patch_and_fix/MEP_2025_12_15/: hotfix.py  patch_mep.py  patch_utils.py
.setup/: .env.example  init_data.sql  prerequisites.sh  setup.sh  setup_db.sh  virtual_env.sh
accesses/: accesses_alerts.py  apps.py  cache_utils.py  conf_perimeters.py  example.conf_perimeters.py  models.py  perimeters_API.py  permissions.py  q_expressions.py  rights.py  rights_schema.md  serializers.py  signals.py  tasks.py  tools.py  urls.py  utils.py  views.py
accesses/data/: new_rights.py  orbis_roles_map.py  rights.py
accesses/email_templates/: access_expiry_alert.html  access_expiry_alert.txt
accesses/migrations/: 0001_initial.py  0002_add_opposing_patient_role.py  0002_role_right_read_logs.py  0003_access_created_by_access_updated_by.py  0003_auto_20211201_1559.py  0004_auto_20211201_1600.py  0004_set_created_by_updated_by_for_accesses.py  0005_auto_20211202_1008.py  0005_perimeter_level.py  0006_auto_20211229_1441.py  0006_perimeter_allowed_users_and_more.py  0006_unify_access_datetime_fields.py  0007_auto_20211229_1442.py  0007_remove_access_end_datetime_and_more.py  0007_unify_access_datetime_fields.py  0008_auto_20220210_1509.py  0008_count_users_on_perimeters.py  0008_remove_access_end_datetime_and_more.py  0009_auto_20220407_1708.py  0009_compute_allowed_users_above_levels.py  0009_count_users_on_perimeters.py  0009_role_right_read_admin_accesses_above_levels.py  0010_add_new_rights_and_rename_others.py  0010_auto_20220408_0823.py  0010_factrelationship.py  0010_remove_perimeter_allowed_users_and_more.py  0010_rename_right_transfer_jupyter_nominative_role_right_export_jupyter_nominative_and_more.py  0011_add_new_rights_and_rename_others.py  0011_auto_20220408_1100.py  0011_remove_obsolete_rights.py  0011_remove_old_rights_add_unique_constraint.py  0012_auto_20220408_1101.py  0012_remove_old_rights_add_unique_constraint.py  0013_auto_20220419_1432.py  0013_remove_profile_email_remove_profile_firstname_and_more.py  0013_rightcategory_right.py  0014_auto_20220616_1312.py  0014_rightcategory_right.py  0015_add_full_data_access_right.py  0015_auto_20220616_1320.py  (+23 more)
accesses/models/: __init__.py  access.py  perimeter.py  profile.py  right.py  right_category.py  role.py  tools.py
accesses/patchs/: accesses_gh_to_hospital.py
accesses/services/: access.py  accesses.py  accesses_syncer.py  perimeters.py  profiles.py  rights.py  roles.py  shared.py
accesses/templates/: access_expiry_alert.html  access_expiry_alert.txt  sync_orbis_accesses_report.html  sync_orbis_accesses_report.txt
accesses/tests/: base.py  perimeter_manageable_test.sql  perimeter_top_hierarchy_read_patient_test.sql  test_accesses_alerts.py  test_accesses_syncer.py  test_count_users.py  test_impersonate.py  test_profiles.py  test_view_access.py  test_view_perimeters.py  test_view_rights.py  test_view_role.py  tests_followup.md  tests_unit.py  tests_view_accesses.py  tests_view_perimeters.py  tests_view_profiles.py  (+1 more)
accesses_fhir_perimeters/: apps.py  perimeters_updater.py  permissions.py  tasks.py  urls.py  views.py
accesses_perimeters/: apps.py  models.py  perimeters_retriever.py  perimeters_updater.py  tasks.py
admin_cohort/: .env.example  .test.env  AuthMiddleware.py  MaintenanceModeMiddleware.py  __init__.py  apps.py  asgi.py  auth_backend.py  backends.py  cache_utils.py  celery.py  conf_auth.py  emails.py  example.conf_auth.py  example.settings.py  exceptions.py  http_timeout.py  influxdb_middleware.py  models.py  permissions.py  routing.py  serializers.py  settings.py  tasks.py  tests_tools.py  tools.py  tools_drf.py  types.py  urls.py  urls_auth.py  urls_login.py  views.py  websocket_consumer.py  wsgi.py
cohort/: FhirAPi.py  __init__.py  apps.py  asgi.py  conf_cohort_job_api.py  crb.py  crb_responses.py  emails.py  example.conf_cohort_job_api.py  hotfix.py  models.py  patch_utils.py  permissions.py  serializers.py  tasks.py  tests.py  tools.py  urls.py  views.py
cohort_job_server/: apps.py  base_operator.py  cohort_counter.py  cohort_creator.py  emails.py  misc.py  permissions.py  tasks.py  utils.py
cohort_operators/: __init__.py  apps.py  cohort_counter.py  cohort_creator.py  counting.py  creating.py  decorators.py  emails.py  enums.py  exceptions.py  job_server.py  job_server_operators.py  job_server_response.py  misc.py  schemas.py  sjs_client.py  tasks.py
commons/: Constants.py  constants.py  tools.py
content_management/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
docker/: nginx.conf
exporters/: .example.env  __init__.py  apps.py  base_exporter.py  csv_exporter.py  enums.py  exceptions.py  hive_exporter.py  infra_api.py  notifications.py  tasks.py  utils.py  xlsx_exporter.py
exports/: __init__.py  apps.py  conf_exports.py  emails.py  enums.py  example.conf_exports.py  example_conf_exports.py  exceptions.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  tools.py  types.py  urls.py  views.py
voting/: serializers.py  tests.py  util.py  views.py
workspaces/: apps.py  conf_workspaces.py  db_helper.py  example.conf_workspaces.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
(+553 files in other folders)
