[project]
name = "Cohort360-Backend"
version = "3.26.8"
authors = ["Assistance Publique - Hopitaux de Paris, Département I&D"]
description = """Supports the official **Cohort360** web app and **Portail**
                 Built by **APHP**, _Département I&D_
              """
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "channels-redis>=4.2.1",
    "channels>=4.2.0",
    "coverage>=7.6.9",
    "daphne>=4.1.2",
    "django-celery-beat>=2.7.0",
    "django-cors-headers>=4.6.0",
    "django-environ>=0.11.2",
    "django-extensions>=3.2.3",
    "django-filter>=24.3",
    "django-redis>=5.4.0",
    "django-safedelete>=1.4.0",
    "django-websocket-redis>=0.6.0",
    "django==5.0.13",
    "djangorestframework>=3.15.2",
    "drf-api-tracking>=1.8.4",
    "drf-extensions>=0.7.1",
    "drf-spectacular>=0.28.0",
    "fhirpy>=2.0.15",
    "gunicorn>=23.0.0",
    "hdfs>=2.7.3",
    "influxdb-client>=1.48.0",
    "kerberos>=1.3.1",
    "krb5>=0.7.0",
    "psycopg[binary]>=3.2.3",
    "pydantic>=2.10.3",
    "pyjwt>=2.10.1",
    "pytest>=8.3.4",
    "python-json-logger==3.2.0",
    "redis>=5.2.1",
    "requests-kerberos>=0.15.0",
    "requests>=2.32.3",
    "celery>=5.4.0",
    "djangorestframework-simplejwt>=5.4.0",
]

[tool.ruff]
target-version = "py312"
lint.select = ["E", "F"]
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
lint.ignore = ["E711"]
lint.unfixable = []
lint.fixable = [
    "A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ",
    "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET",
    "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"
]
line-length = 150
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "*/migrations"
]

[tool.safety]
# pass
