[project]
name = "Cohort360-Backend"
version = "3.29.0-dev"
authors = ["Assistance Publique - Hopitaux de Paris, Département I&D"]
description = """Supports the official **Cohort360** web app and **Portail**
                 Built by **APHP**, _Département I&D_
              """
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref>=3.8",
    "channels-redis>=4.2.1",
    "channels>=4.2.0",
    "coverage>=7.6.9",
    "daphne>=4.1.2",
    "django-celery-beat>=2.7.0",
    "django-cors-headers>=4.6.0",
    "django-environ>=0.11.2",
    "django-extensions>=3.2.3",
    "django-filter>=24.3",
    "django-redis>=5.4.0",
    "django-safedelete>=1.4.0",
    "django-websocket-redis>=0.6.0",
    "django==5.0.14",
    "djangorestframework>=3.15.2",
    "drf-api-tracking>=1.8.4",
    "drf-extensions>=0.7.1",
    "drf-spectacular>=0.28.0",
    "fhirpy>=2.0.15",
    "gunicorn>=23.0.0",
    "hdfs>=2.7.3",
    "influxdb-client>=1.48.0",
    "kerberos>=1.3.1",
    "krb5>=0.7.0",
    "psycopg[binary]>=3.2.3",
    "pydantic>=2.10.3",
    "pyjwt>=2.10.1",
    "pytz",
    "pyyaml>=6.0.1",
    "python-dateutil>=2.8.2",
    "pytest>=8.3.4",
    "python-json-logger==3.2.0",
    "redis>=5.2.1",
    "requests-kerberos>=0.15.0",
    "requests>=2.32.3",
    "celery>=5.4.0",
    "djangorestframework-simplejwt>=5.4.0",
]

[dependency-groups]
dev = [
    "mypy>=1.11",
    "django-stubs>=5.0.4",
    "djangorestframework-stubs>=3.15.0",
    "types-pytz",
    "types-PyYAML",
]

[tool.ruff]
target-version = "py312"
lint.select = ["E", "F"]
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
lint.ignore = ["E711"]
lint.unfixable = []
lint.fixable = [
    "A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ",
    "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET",
    "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"
]
line-length = 150
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "*/migrations"
]

[tool.safety]
# pass

# mypy: exclut tests/migrations (sinon bruit massif) ; plugin django-stubs (CI: .env + DJANGO_SETTINGS_MODULE).
[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
show_error_codes = true
namespace_packages = true
exclude = [
    '(^|/)migrations(/|$)',
    '(^|/)tests(/|$)',
    '^conftest\\.py$',
]
disable_error_code = ["import-untyped"]
no_implicit_optional = false

# Scripts one-off (patch) : bruit inutile.
[[tool.mypy.overrides]]
module = "cohort.scripts.*"
ignore_errors = true

# DRF DefaultRouter() + register() : stubs DRF incompatibles (None vs chaînage).
[[tool.mypy.overrides]]
module = ["accesses.urls", "cohort.urls"]
disable_error_code = ["func-returns-value", "attr-defined", "unreachable"]

[tool.django-stubs]
django_settings_module = "admin_cohort.settings"

# deptry: voir package_module_name_map. DEP002 ignoré par paquet (pas globalement) : django/ASGI/outils sans import top-level.
[tool.deptry]
extend_exclude = ["^\\.conf/", "^\\.local/", "^\\.patch_and_fix/"]

[tool.deptry.per_rule_ignores]
DEP002 = [
    "channels-redis",
    "coverage",
    "daphne",
    "django-cors-headers",
    "django-extensions",
    "django-redis",
    "django-websocket-redis",
    "kerberos",
    "krb5",
    "psycopg",
    "redis",
    "requests-kerberos",
]

[tool.deptry.package_module_name_map]
djangorestframework = "rest_framework"
"django-environ" = "environ"
"django-filter" = "django_filters"
"django-cors-headers" = "corsheaders"
"drf-api-tracking" = "rest_framework_tracking"
"drf-extensions" = "rest_framework_extensions"
"drf-spectacular" = "drf_spectacular"
"djangorestframework-simplejwt" = "rest_framework_simplejwt"
"python-json-logger" = "pythonjsonlogger"
"django-safedelete" = "safedelete"
pyyaml = "yaml"
"python-dateutil" = "dateutil"
pyjwt = "jwt"
"influxdb-client" = "influxdb_client"
"requests-kerberos" = "requests_kerberos"

[tool.bandit]
exclude_dirs = [".venv", "tests", "migrations", ".tox", ".local", ".patch_and_fix"]
skips = ["B101", "B104", "B608"]
